styled the header and nav

--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
     </head>
     <body>
         <main id="main">
-
-            <div class="">
-                <h1>Dr. Norman Borlaug</h1>
+            <!-- Container for content at top of page -->
+            <div class="top-content-container">
+                <h1 id="title">Dr. Norman Borlaug</h1>
                 <p id="caption">The man who saved billions of lives</p>
             </div>
-
+            <!-- Container for all hero content -->
             <div class="hero-container">
                 <div class="hero-div">
-                    <div class="hero-img-div">
-                        <img src="images/norman-in-wheat-field.jpg" alt="Norman in a wheat field training fellow biologists">
+                    <div class="img-div">
+                        <img src="images/norman-in-wheat-field.jpg" alt="Norman in a wheat field training fellow biologists" id="image">
                     </div>
                     <div class="hero-img-caption-div">
-                        <p id="hero-img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
+                        <p id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
                     </div>
                 </div>
             </div>
-
+            <!-- Container for timeline -->
             <div class="timeline-container">
-                <h2>Here's a timeline of Dr. Borlaug's life:</h2>
+                <h2 id="tribute-info">Here's a timeline of Dr. Borlaug's life:</h2>
                 <ul>
                     <li><b>1914</b> - Born in Cresco, Iowa</li>
                     <li><b>1933</b> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
@@ -47,11 +47,12 @@
                     <li><b>2009</b> - dies at the age of 95.</li>
                 </ul>
             </div>
-                <div class="bottom-content-container">
-                    <p class="quote-paragraph"><i>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</i></p>
-                    <p class="quote-paragraph"><i>-- Indian Prime Minister Manmohan Singh</i></p>
-                </div>
-                <p class="wiki-link"><b>If you have time, you should read more about this incredible human being on his <a href="#">Wikipedia entry.</a></b></p>
+            <!-- Container for content at bottom of page -->
+            <div class="bottom-content-container">
+                <p class="quote-paragraph"><i>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</i></p>
+                <p class="quote-paragraph"><i>-- Indian Prime Minister Manmohan Singh</i></p>
+            </div>
+                <p class="wiki-link"><b>If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank" id="tribute-link">Wikipedia entry.</a></b></p>
         </main>
     </body>
 </html>
